<?xml version="1.0"?>
<package>
  <name>hark_audio_capture</name>
  <version>0.0.0</version>
  <description>The hark_audio_capture package</description>

  <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>
  <license>BSD</license>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>audio_common_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>hark_msgs</build_depend>
  <run_depend>audio_common_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>hark_msgs</run_depend>
</package>
